[gd_scene load_steps=15 format=3 uid="uid://cmr47b0yoi1vm"]

[ext_resource type="PhysicsMaterial" uid="uid://h2b3l4uf0q5p" path="res://Material/Physic/BasicBumper.tres" id="1_15sn7"]
[ext_resource type="Script" uid="uid://lobwfmlxako" path="res://scripts/Map props/Bumper.gd" id="2_p8vam"]
[ext_resource type="AudioStream" uid="uid://b0j58qjeyv30o" path="res://Sounds/Bounce Sound01.wav" id="3_sec2e"]
[ext_resource type="AudioStream" uid="uid://cu8ld08d6bhhu" path="res://Sounds/Bounce Sound02.wav" id="4_446d1"]
[ext_resource type="AudioStream" uid="uid://b7u0oq40fhkaa" path="res://Sounds/Bounce Sound03.wav" id="5_og1gt"]
[ext_resource type="PackedScene" uid="uid://d2nlkgcw21uwb" path="res://art/Particles/test_particles.tscn" id="6_xsxlw"]
[ext_resource type="Shader" path="res://Shaders/saturation.gdshader" id="7_2b531"]
[ext_resource type="PackedScene" path="res://art/Particles/BumperBumbing.tscn" id="7_p8vam"]
[ext_resource type="Texture2D" uid="uid://13wc1xta3hmh" path="res://art/Bumpers/bumper_police_breaking.png" id="8_15sn7"]
[ext_resource type="PackedScene" uid="uid://dsr14okmfk2qn" path="res://art/Particles/p_round_bumper_breaking_new.tscn" id="8_sec2e"]
[ext_resource type="Texture2D" uid="uid://bosj7a08s10rx" path="res://art/Bumpers/bumper_round.png" id="9_apo56"]
[ext_resource type="PackedScene" uid="uid://bgjbqg74jada0" path="res://art/Particles/StormLightning.tscn" id="10_rysk3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nxlrn"]
resource_local_to_scene = true
shader = ExtResource("7_2b531")
shader_parameter/saturation = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nb1wl"]
radius = 30.0

[node name="CopsBreakableBumper" type="StaticBody2D" node_paths=PackedStringArray("StormParticle", "CollisionShape")]
collision_layer = 4
collision_mask = 2
physics_material_override = ExtResource("1_15sn7")
script = ExtResource("2_p8vam")
CanDie = true
Life = 1
Power = 40.0
Score = Array[int]([100, 50, 5])
BiasPower = 0.0
SoundOnHits = Array[AudioStream]([ExtResource("3_sec2e"), ExtResource("4_446d1"), ExtResource("5_og1gt")])
ParticleOnHit = ExtResource("6_xsxlw")
ParticleOnHit2 = ExtResource("7_p8vam")
OnDestroyParticle = ExtResource("8_sec2e")
StormParticle = NodePath("GPUParticles2D")
CollisionShape = NodePath("CollisionShape2D")
metadata/_custom_type_script = "uid://lobwfmlxako"

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_nxlrn")
texture = ExtResource("8_15sn7")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
visible = false
texture = ExtResource("9_apo56")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_nb1wl")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="GPUParticles2D" parent="." instance=ExtResource("10_rysk3")]
scale = Vector2(0.19, 0.045)
emitting = false
amount = 4
