[gd_scene load_steps=4 format=3 uid="uid://boobpj10lfiqa"]

[ext_resource type="Script" uid="uid://lobwfmlxako" path="res://scripts/Map props/Bumper.gd" id="1_gbh0v"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_n77mx"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_nb1wl"]
radius = 64.0312

[node name="BasicBumper" type="StaticBody2D" node_paths=PackedStringArray("AudioPlayer")]
script = ExtResource("1_gbh0v")
Power = 100.0
AudioPlayer = NodePath("AudioPlayer")
metadata/_custom_type_script = "uid://lobwfmlxako"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_n77mx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nb1wl")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
